[package]
name = "toy-rsa"
version = "0.1.0"
authors = ["Jordan Malubay"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
primes = "0.3.0"
[dependencies.toy_rsa_lib]
git = "http://github.com/pdx-cs-rust/toy-rsa-lib"
